# mds-openapi

./: .gitignore  .pre-commit-config.yaml  .spectral.mjs  .spectral.models.yaml  .spectral.yaml  README.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint-schemas.yml  lint.yml  pytest.yaml
.stoplight/: styleguide.json
docs/: README.md
models/: common.yaml  data-types.yaml  event.yaml  geography.yaml  jurisdiction.yaml  mutable-stop.yaml  policy-rule.yaml  policy.yaml  report.yaml  requirements.yaml  response.yaml  stop.yaml  telemetry.yaml  trip.yaml  vehicle-status.yaml  vehicle.yaml
models/data-types/: area-type.yaml  area_type.yaml  currency-cost.yaml  currency.yaml  day.yaml  days.yaml  event-type-array.yaml  event-type.yaml  event_type.yaml  event_type_array.yaml  geojson-featurecollection.yaml  gps.yaml  gps_data.yaml  integer-positive.yaml  integer_positive.yaml  iso-date.yaml  iso-dayhour.yaml  iso-dayhourminute.yaml  iso-duration.yaml  iso-time.yaml  iso_date.yaml  iso_dayhour.yaml  iso_time.yaml  language-tag.yaml  minimum-year.yaml  minimum_year.yaml  mode.yaml  propulsion-type-array.yaml  propulsion-type.yaml  propulsion_type.yaml  propulsion_type_array.yaml  rental-method-array.yaml  rental_methods.yaml  stop.yaml  stop_status.yaml  string.yaml  (+18 more)
notebooks/: data-cleanup.ipynb
reference/: agency.yaml  geography.yaml  jurisdiction.yaml  mds.yaml  metrics.yaml  policy.yaml  provider.yaml
tests/: conftest.py  test_policy.py  test_policy_rule.py
v1.0/: cds.yaml
v2.0/: mds.yaml
v2.0.0/: mds.yaml
(+37 files in other folders)
